Doc: define target voor function qsnprintf()

Task-number: QTBUG-43537
Change-Id: I76c511891a1a07eca77da399d23097e76047f824
Reviewed-by: Martin Smith <martin.smith@digia.com>

cregit: 871560d45c1e4ad5c70c9d6b77cad8d3b15a4103 https://github.com/qt/qtbase/commit/871560d45c1e4ad5c70c9d6b77cad8d3b15a4103